# gamma-mcp-server

./: .env.example  README.md  fastmcp.json  main.py  pyproject.toml
gamma_api_docs/: 1-overview_apis.md  2-Generate API.md  3-create template api.md  4-List Themes and List Folders APIs explained.md
lib/: fastmcp_server.py  tool.py
